# DCL_CameraNUI

./: .gitignore  README.md
src/: CMakeLists.txt
src/Components/: CMakeLists.txt
src/Components/CameraNUI/: CMakeLists.txt  CameraNUI.cpp  CameraNUI.hpp  FreenectNUIDevice.hpp
src/Components/DepthConverter/: CMakeLists.txt  DepthConverter.cpp  DepthConverter.hpp  DepthModeTranslator.cpp  DepthModeTranslator.hpp
src/Components/RGBDViewer/: CMakeLists.txt  RGBDViewer.cpp  RGBDViewer.hpp
src/cmake/Modules/: Findlibfreenect.cmake
tasks/: CameraNUIViewerExample.xml  Display.xml  KinectRGBDViewer.xml  KinectRGBXYZViewer.xml  RGBDSequenceViewer.xml  SimpleCameraNUIViewer.xml
